Add button loads 1000 more users, and sorts them alphabetically with already loaded users

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -49,7 +49,13 @@
                             <outlet property="delegate" destination="BUo-Vf-S8d" id="xCO-pc-nxz"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="bea-9X-iQb"/>
+                    <navigationItem key="navigationItem" id="bea-9X-iQb">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="Re3-Fc-OLn">
+                            <connections>
+                                <action selector="loadMoreUsers:" destination="BUo-Vf-S8d" id="zkz-DW-eHQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wpl-7d-XpW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
