Added cache.swift anticipating need to cache downloaded images for users.  established enum cascading for Users Model.  wrote comment-logic for table view controller

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -64,7 +64,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Users" id="ZON-QG-U42">
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="AAo-dc-SSe"/>
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="AAo-dc-SSe">
+                            <connections>
+                                <action selector="addUsersButtonPressed:" destination="lFQ-fj-bMR" id="hDy-tS-3oQ"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4fI-ad-x6h" userLabel="First Responder" sceneMemberID="firstResponder"/>
